<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_marginBottom="15dp"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="75dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/logo" />

    <!--<androidx.cardview.widget.CardView-->
        <!--android:layout_margin="10dp"-->
        <!--app:cardCornerRadius="8dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" >-->
        <LinearLayout
            android:padding="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:inputType="text"
                android:padding="10dp"
                android:background="@drawable/signinoutedittext"
                android:id="@+id/signinUserEdit"
                android:hint="@string/signinEdittext"
                android:textStyle="bold"
                android:textSize="16dp"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:inputType="textPassword"
                android:padding="10dp"
                android:background="@drawable/signinoutedittext"
                android:id="@+id/signinUserPwd"
                android:hint="@string/signinPassword"
                android:textStyle="bold"
                android:drawablePadding="10dp"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginLeft="5dp"
                android:textColor="#CC2E2E"
                android:id="@+id/forgate"
                android:text="Forgot Password?"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:textColor="#fff"
                    android:background="@drawable/signinregisterbtn"
                    android:id="@+id/signinBtn"
                    android:text="@string/signinButton"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:textColor="#fff"
                    android:background="@drawable/signinregisterbtn"
                    android:layout_marginTop="10dp"
                    android:id="@+id/signUpBtn"
                    android:text="@string/signUpBtn"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">



                    <!--<Button-->
                        <!--android:id="@+id/admin"-->
                        <!--android:text="@string/admin"-->
                        <!--android:textStyle="bold"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content" />-->

            </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    <!--</androidx.cardview.widget.CardView>-->
    </LinearLayout>
</LinearLayout>