<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activity.RegisterActivity">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_margin="20dp"
            android:layout_marginBottom="15dp"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:layout_marginTop="5dp"
            android:background="@drawable/signinoutedittext"
            android:padding="10dp"
            android:hint="User Name"
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_marginTop="5dp"
            android:background="@drawable/signinoutedittext"
            android:padding="10dp"
            android:inputType="textPassword"
            android:hint="Password"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_marginTop="15dp"
            android:background="@drawable/signinoutedittext"
            android:padding="10dp"
            android:hint="Full Name"
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_marginTop="5dp"
            android:background="@drawable/signinoutedittext"
            android:padding="10dp"
            android:hint="@string/ins"
            android:id="@+id/schoolName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="5dp"
            android:background="@drawable/signinoutedittext"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:text="Class"
                android:textSize="18sp"
                android:id="@+id/className"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/class_Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:background="@drawable/signinoutedittext"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Division"
                android:textSize="18sp"
                android:id="@+id/division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/division_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_marginTop="5dp"
                android:background="@drawable/signinoutedittext"
                android:padding="10dp"
                android:id="@+id/phnNumber"
                android:inputType="phone"
                android:singleLine="true"
                android:hint="@string/phnnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <EditText
            android:layout_marginTop="5dp"
            android:background="@drawable/signinoutedittext"
            android:padding="10dp"
            android:hint="Email"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_marginTop="5dp"
            android:background="@drawable/signinoutedittext"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Referer"
                android:textSize="18sp"
                android:id="@+id/reference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/reference_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
            android:textColor="#ffff"
            android:textStyle="bold"
            android:background="@drawable/signinregisterbtn"
            android:id="@+id/backbtn"
            android:layout_margin="5dp"
            android:text="@string/backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
            <Button
                android:textColor="#ffff"
                android:textStyle="bold"
                android:background="@drawable/signinregisterbtn"
                android:id="@+id/regbtn"
                android:layout_margin="5dp"
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>



</FrameLayout>
</ScrollView>